--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "module": "index.ts",
   "type": "module",
   "private": true,
+  "scripts": {
+    "init-day": "bun run scripts/init-day.ts"
+  },
   "devDependencies": {
     "@types/bun": "latest"
   },
